--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,20 @@
 buildscript {
     repositories {
-        jcenter()
-        maven { url = "https://files.minecraftforge.net/maven" }
+        mavenCentral()
+        maven {
+            name = "forge"
+            url = "https://maven.minecraftforge.net/"
+        }
+        maven {
+            name = "sonatype"
+            url = "https://oss.sonatype.org/content/repositories/snapshots/"
+        }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
     }
 }
+
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "1.0"
@@ -22,4 +30,20 @@ minecraft {
     version = "1.12.2-14.23.5.2855"
     runDir = "run"
     mappings = "stable_39"
+
+    // Agregar esto para asegurarnos de que use el cache correcto
+    makeObfSourceJar = false
+    useDepAts = true
+}
+
+repositories {
+    mavenCentral()
+    maven {
+        name = "forge"
+        url = "https://maven.minecraftforge.net/"
+    }
+}
+
+dependencies {
+    // Aquí puedes agregar otras dependencias si las necesitas
 }
